--- a/Diplomado_Web_MVC_Consultorio_Medico/Web.config
+++ b/Diplomado_Web_MVC_Consultorio_Medico/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Diplomado_Web_MVC_Consultorio_Medico-20200127121342.mdf;Initial Catalog=aspnet-Diplomado_Web_MVC_Consultorio_Medico-20200127121342;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=Prueba-PC;Initial Catalog= ConsultorioMedicoDB;User Id = Sa; Password = Maguana1; Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
